--- a/010/index.html
+++ b/010/index.html
@@ -9,6 +9,75 @@
 </head>
 
 <body>
+  <section class="payment">
+    <h2>Payment</h2>
+    <form>
+      <section class="card">
+        <label class="container" for="card"><input type="radio" id="card" name="type_of_payment" value="card"><span
+            class="checkmark checkmark-first"></span>Card<< /label>
+            /label>
+            <p>Pay with a card</p>
+            <div class="card-number">
+              <label for="card-number">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="icon icon-tabler icons-tabler-outline icon-tabler-credit-card">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M3 5m0 3a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v8a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3z" />
+                  <path d="M3 10l18 0" />
+                  <path d="M7 15l.01 0" />
+                  <path d="M11 15l2 0" />
+                </svg>
+              </label>
+              <input type="text" id="card-number" placeholder="Card number">
+            </div>
+
+
+
+            <div class="card-info">
+              <div class="card-date">
+                <label for="card-date">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="icon icon-tabler icons-tabler-outline icon-tabler-credit-card">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M3 5m0 3a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v8a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3z" />
+                    <path d="M3 10l18 0" />
+                    <path d="M7 15l.01 0" />
+                    <path d="M11 15l2 0" />
+                  </svg></label>
+                <input type="text" id="card-date" placeholder="mm/dd">
+              </div>
+              <div class="card-cvc">
+                <label for="card-cvc">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="icon icon-tabler icons-tabler-outline icon-tabler-lock">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M5 13a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v6a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-6z" />
+                    <path d="M11 16a1 1 0 1 0 2 0a1 1 0 0 0 -2 0" />
+                    <path d="M8 11v-4a4 4 0 1 1 8 0v4" />
+                  </svg></label>
+                <input type="text" id="card-cvc" placeholder="CVC">
+              </div>
+
+
+            </div>
+            <input type="checkbox" id="remember-card"><label for="remember-card" id="label-checkbox">Remember my
+              card</label>
+      </section>
+      <section class="pay-later">
+        <label for="pay-later" class="container">
+          <input type="radio" id="pay-later" name="type_of_payment" value="pay-later"><span
+            class="checkmark checkmark-second"></span>Get
+          first.
+          Pay
+          later</label>
+        <p>Pay within 30 days.</p>
+      </section>
+      <button type="submit" class="submit">Continue</button>
+    </form>
+  </section>
 
 
   <script src="./app.js"></script>
