--- a/109/index.html
+++ b/109/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="bg-[#e9f2ef] flex justify-center items-center min-h-screen">
-  <section class="bg-[#F9FAFC] shadow-lg rounded-md w-full max-w-xl overflow-hidden">
+  <section class="bg-[#F9FAFC] shadow-lg rounded-md w-full max-w-md overflow-hidden">
     <header class="header-bg text-white flex flex-col h-60 p-4">
       <h1 class="font-bold text-xl mt-auto">Guardians of the Galaxy Vol 2</h1>
       <p class="flex gap-1">
@@ -25,7 +25,8 @@
         Cineplex Entertaiment, Skopie MK
       </p>
     </header>
-    <div class="px-4 py-6">
+    <div
+      class="px-4 py-6 relative after:bg-gradient-to-t after:from-cyan-100 after:via-white after:to-white after:h-32 after:bottom-0 after:left-0 after:w-full after:absolute after:-z-10 isolate">
       <div class="flex items-center justify-center gap-4 text-sm">
         <p class="flex gap-1">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -65,6 +66,21 @@
           Selected
         </p>
       </div>
+      <div class="grid grid-cols-8 gap-1 place-items-center my-6 max-w-sm mx-auto relative" id="seats">
+        <p class="absolute -left-4 top-0 flex flex-col gap-1 text-slate-500">
+          <span>G</span>
+          <span>F</span>
+          <span>E</span>
+          <span>D</span>
+          <span>C</span>
+          <span>B</span>
+          <span>А</span>
+        </p>
+      </div>
+      <div>
+        <p class="text-slate-400 text-center"> Screen</p>
+        <div class="screen"></div>
+      </div>
     </div>
     <footer class="flex bg-pink-700 text-white leading-7">
       <div class="p-4">
@@ -74,8 +90,8 @@
       </div>
       <div class="bg-pink-500 grow p-4">
         <p>Jul 11, 19:15</p>
-        <p>3</p>
-        <p><strong>$31</strong></p>
+        <p id="total-tickets">3</p>
+        <p><strong id="total-price">$31</strong></p>
       </div>
     </footer>
   </section>
